--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,6 +25,8 @@ section, summary, time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;}
 
+
+	
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
@@ -298,7 +300,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #18bfef !important;
+			color: #B0B0B0 !important;
 		}
 
 	strong, b {
@@ -2215,8 +2217,8 @@ input, select, textarea {
 		input[type="button"]:hover,
 		button:hover,
 		.button:hover {
-			box-shadow: inset 0 0 0 2px #18bfef;
-			color: #18bfef !important;
+			box-shadow: inset 0 0 0 2px  #7c979e;
+			color: #7c979e !important;
 		}
 
 		input[type="submit"].primary,
@@ -2234,7 +2236,7 @@ input, select, textarea {
 			input[type="button"].primary:hover,
 			button.primary:hover,
 			.button.primary:hover {
-				background-color: #18bfef;
+				background-color: #7c979e;
 			}
 
 /* Form */
@@ -2491,7 +2493,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #18bfef;
+			border-color:  #7c979e;
 		}
 
 	select {
@@ -2890,7 +2892,7 @@ input, select, textarea {
 	}
 
 	ul.icons li a.icon:hover:before {
-		color: #18bfef;
+		color:  #7c979e;
 	}
 
 	ul.icons.alt li .icon:before {
@@ -2898,7 +2900,7 @@ input, select, textarea {
 	}
 
 	ul.icons.alt li a.icon:hover:before {
-		box-shadow: inset 0 0 0 2px #18bfef;
+		box-shadow: inset 0 0 0 2px  #7c979e;
 	}
 
 /* Section/Article */
@@ -3235,7 +3237,7 @@ input, select, textarea {
 			height: 100%;
 			background-color: #212931;
 			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
-			background-size: auto,								auto,														100% auto;
+			background-size: 100%,								100%,														100%, 100%;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
 			background-attachment: scroll,								scroll,														scroll;
@@ -3332,7 +3334,8 @@ input, select, textarea {
 		}
 
 		#intro h1, #intro h2, #intro h3, #intro h4, #intro h5, #intro h6 {
-			color: #ffffff;
+			color: white;
+			text-shadow: 4px 4px #1e252d;
 		}
 
 		#intro blockquote {
@@ -3363,8 +3366,8 @@ input, select, textarea {
 			#intro input[type="button"]:hover,
 			#intro button:hover,
 			#intro .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px  #7c979e;
+				color:  #7c979e !important;
 			}
 
 			#intro input[type="submit"].primary,
@@ -3382,7 +3385,7 @@ input, select, textarea {
 				#intro input[type="button"].primary:hover,
 				#intro button.primary:hover,
 				#intro .button.primary:hover {
-					background-color: #18bfef;
+					background-color:  #7c979e;
 				}
 
 		#intro h1 {
@@ -3395,6 +3398,7 @@ input, select, textarea {
 			font-style: italic;
 			margin-top: -0.25rem;
 			text-align: center;
+			text-shadow: 2px 2px #1e252d;
 		}
 
 		#intro + #header {
@@ -3408,6 +3412,7 @@ input, select, textarea {
 				transform: translateY(2rem);
 				opacity: 0;
 				visibility: hidden;
+				text-shadow: 2px 4px #1e252d;
 			}
 
 		#intro.hidden {
@@ -3533,7 +3538,7 @@ input, select, textarea {
 
 			#header a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color:  #7c979e !important;
 			}
 
 		#header strong, #header b {
@@ -3577,8 +3582,8 @@ input, select, textarea {
 		}
 
 			#header .logo:hover {
-				border-color: #18bfef !important;
-				color: #18bfef !important;
+				border-color:  #7c979e !important;
+				color:  #7c979e !important;
 			}
 
 		@media screen and (max-width: 980px) {
@@ -3632,7 +3637,7 @@ input, select, textarea {
 		}
 
 		#nav ul.icons li a.icon:hover:before {
-			color: #18bfef;
+			color:  #7c979e;
 		}
 
 		#nav ul.icons.alt li .icon:before {
@@ -3640,7 +3645,7 @@ input, select, textarea {
 		}
 
 		#nav ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #18bfef;
+			box-shadow: inset 0 0 0 2px  #7c979e;
 		}
 
 		#nav input, #nav select, #nav textarea {
@@ -3654,7 +3659,7 @@ input, select, textarea {
 
 			#nav a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color:  #7c979e !important;
 			}
 
 		#nav strong, #nav b {
@@ -3730,7 +3735,7 @@ input, select, textarea {
 					}
 
 						#nav ul.links li.active a:hover {
-							color: #18bfef !important;
+							color:  #7c979e !important;
 						}
 
 		#nav ul.icons {
@@ -3974,7 +3979,7 @@ input, select, textarea {
 
 			#footer a:hover {
 				border-bottom-color: transparent;
-				color: #18bfef !important;
+				color:  #7c979e !important;
 			}
 
 		#footer strong, #footer b {
@@ -4017,8 +4022,8 @@ input, select, textarea {
 			#footer input[type="button"]:hover,
 			#footer button:hover,
 			#footer .button:hover {
-				box-shadow: inset 0 0 0 2px #18bfef;
-				color: #18bfef !important;
+				box-shadow: inset 0 0 0 2px  #7c979e;
+				color:  #7c979e !important;
 			}
 
 			#footer input[type="submit"].primary,
@@ -4036,7 +4041,7 @@ input, select, textarea {
 				#footer input[type="button"].primary:hover,
 				#footer button.primary:hover,
 				#footer .button.primary:hover {
-					background-color: #18bfef;
+					background-color:  #7c979e;
 				}
 
 		#footer label {
@@ -4119,7 +4124,7 @@ input, select, textarea {
 		}
 
 		#footer ul.icons li a.icon:hover:before {
-			color: #18bfef;
+			color:  #7c979e;
 		}
 
 		#footer ul.icons.alt li .icon:before {
@@ -4127,7 +4132,7 @@ input, select, textarea {
 		}
 
 		#footer ul.icons.alt li a.icon:hover:before {
-			box-shadow: inset 0 0 0 2px #18bfef;
+			box-shadow: inset 0 0 0 2px  #7c979e;
 		}
 
 		#footer header.major .date:before, #footer header.major .date:after {
