--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3357,8 +3357,8 @@ input, select, textarea {
 		#intro button,
 		#intro .button {
 			background-color: transparent;
-			box-shadow: inset 0 0 0 2px #ffffff;
-			color: #ffffff !important;
+			/* box-shadow: inset 0 0 0 2px #ffffff; */
+			color: #0c0c0c !important;
 		}
 
 			#intro input[type="submit"]:hover,
@@ -3398,7 +3398,7 @@ input, select, textarea {
 			font-style: italic;
 			margin-top: -0.25rem;
 			text-align: center;
-			text-shadow: 2px 2px #1e252d;
+			
 		}
 
 		#intro + #header {
@@ -3412,7 +3412,7 @@ input, select, textarea {
 				transform: translateY(2rem);
 				opacity: 0;
 				visibility: hidden;
-				text-shadow: 2px 4px #1e252d;
+				/* text-shadow: 2px 4px #1e252d; */
 			}
 
 		#intro.hidden {
@@ -3498,7 +3498,7 @@ input, select, textarea {
 /* Header */
 
 	#header {
-		color: #ffffff;
+		color: #0a0a0a;
 		-moz-align-items: center;
 		-webkit-align-items: center;
 		-ms-align-items: center;
@@ -3532,7 +3532,7 @@ input, select, textarea {
 		}
 
 		#header a {
-			color: #ffffff;
+			color: #030303;
 			border-bottom-color: rgba(255, 255, 255, 0.5);
 		}
 
@@ -3569,7 +3569,7 @@ input, select, textarea {
 			transition: border-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.5s ease, transform 0.5s ease, visibility 0.5s;
 			pointer-events: auto;
 			border-style: solid;
-			border-color: #ffffff;
+			border-color: #0a0a0a;
 			border-width: 5px !important;
 			font-family: "Source Sans Pro", Helvetica, sans-serif;
 			font-size: 2.25rem;
